resume rough draft

--- a/hobbs_resume.tex
+++ b/hobbs_resume.tex
@@ -115,7 +115,7 @@
       {Bioinformatics and Game Design Research Assistant}{Sept. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Computational Biology}
-          {Analyzing image data of lung sputum collected by the University of New Mexico School of Medicine. Recipient of the SC Student-Initiated Research Projects grant from the National Institutes of Health.}
+          {Analyzing image data of lung sputum collected by the University of New Mexico School of Medicine. Recipient of the SC Student-Initiated Research grant from the National Institutes of Health.}
         \resumeItem{Machine Learning}
           {Utilizing machine learning techniques including Convolutional Neural Networks and Python libraries such as OpenCV and TensorFlow to train networks that can analyze cancerous cell slides.}
         \resumeItem{Game Design and Outreach}
@@ -151,9 +151,9 @@
       {Data Science and Civil Engineering Research Assistant}{June 2020 -- May 2021}
       \resumeItemListStart
         \resumeItem{Data Analysis}
-          {blahblahblah.}
+          {Analyzed data collected from an automated dyslexia reading evaluator for elementary students.}
         \resumeItem{Data Cleaning}
-          {blahblahblah.}
+          {Organized data into Python dictionaries and used data science libraries such as Pandas to optimize for machine learning algorithms, neural networks, and pattern recognition.}
         \resumeItem{Engineering Subject Research}
           {Consulted on Acoustic Emission (AE) data collected from concrete degradation. Used Python and R to prepare/analyze data on concrete and other structures.}
         \resumeItem{Presentation \& Reports}
@@ -166,7 +166,7 @@
 \section{Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{Personal Website}
-      {Blog and information about my current projects. Written using Ghost.}
+      {(Work-in-Progress) Blog and information about my current projects. Written using Ghost.}
     \resumeSubItem{Daily Workout "App"}
       {A simple Python code that I use to push my daily workout statistics to a mongoDB server.}
   \resumeSubHeadingListEnd
