--- a/hobbs_resume.tex
+++ b/hobbs_resume.tex
@@ -92,8 +92,8 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://wihobbs.github.io/}{\Large William Hobbs}} & Email : \href{mailto:william.ira.hobbs@gmail.com}{william.ira.hobbs@gmail.com}\\
-  \href{http://wihobbs.github.io/}{http://wihobbs.github.io/} & Mobile : +1-803-917-7750 \\
+  \textbf{\Large William Hobbs}} & \href{mailto:william.ira.hobbs@gmail.com}{william.ira.hobbs@gmail.com} \\
+  & +1-803-917-7750 \\
 \end{tabular*}
 
 
@@ -115,7 +115,7 @@
       {Bioinformatics and Game Design Research Assistant}{Sept. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Computational Biology}
-          {Analyzing image data of lung sputum collected by the University of New Mexico School of Medicine. Recipient of the SC Student-Initiated Research grant from the National Institutes of Health.}
+          {Analyzing image data of lung sputum collected by the University of New Mexico Comprehensive Cancer Center.}
         \resumeItem{Machine Learning}
           {Utilizing machine learning techniques including Convolutional Neural Networks and Python libraries such as OpenCV and TensorFlow to train networks that can analyze cancerous cell slides.}
         \resumeItem{Game Design and Outreach}
@@ -127,13 +127,13 @@
       {High-Performance Computing Intern}{June 2021 -- Aug. 2021}
       \resumeItemListStart
         \resumeItem{Supercomputing Systems}
-          {Learned about the hardware, software, and various pieces of infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center. Cori is currently the 30th most powerful supercomputer in the world.}
+          {Learned about the hardware, software, and infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center (NERSC). Cori is currently the 30th most powerful supercomputer in the world.}
         \resumeItem{Novel Technologies}
-          {Ported the Flux Framework (developed by Lawrence Livermore National Laboratory) onto NERSC's Cori system. Used specialized HPC software such as Shifter (containerization), Spack (package management), Process Management Interface for multi-node jobs, and the Cray Linux Environment. }
+          {Installed the Flux framework (developed by Lawrence Livermore National Laboratory) onto NERSC's Cori system. Used specialized HPC software such as Shifter (containerization), Spack (package management), SLURM (scheduling), Process Management Interface for multi-node jobs, and the Cray Linux Environment.}
          \resumeItem{Workflow Management}
-          {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users.}
+          {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users. Expanded workflow toolkit to include the Flux framework, a novel resource management framework with interactive job submission capabilites.}
         \resumeItem{Technical Documentation}
-          {Wrote a page for the NERSC Technical Documentation on using the Flux Framework on the Cori System. Flux is a resource management framework for supercomputers with significant job submission control for users.}
+          {Wrote a page for the NERSC Technical Documentation and a research report on using the Flux framework on the Cori System. Presented a poster at the LBNL Computing Sciences Summer Poster Session.}
       \resumeItemListEnd
       
 % --------Multiple Positions Heading------------
@@ -163,22 +163,22 @@
 
 
 %-----------PROJECTS-----------------
-\section{Projects}
-  \resumeSubHeadingListStart
-    \resumeSubItem{Personal Website}
-      {(Work-in-Progress) Blog and information about my current projects. Written using Ghost.}
-    \resumeSubItem{Daily Workout "App"}
-      {A simple Python code that I use to push my daily workout statistics to a mongoDB server.}
-  \resumeSubHeadingListEnd
-
+%\section{Projects}
+%  \resumeSubHeadingListStart
+%    \resumeSubItem{Personal Website}
+%      {(Work-in-Progress) Blog and information about my current projects. Written using Ghost.}
+%    \resumeSubItem{Daily Workout ``App"}
+%      {A simple Python code that I use to push my daily workout times to a mongoDB server.}
+%  \resumeSubHeadingListEnd
+%
 %
 %-----------PROJECTS-----------------
-\section{Activities}
+\section{Campus Activities}
   \resumeSubHeadingListStart
-    \resumeSubItem{Office of Undergraduate Research}
-      {Campus Ambassador for OUR - conduct presentations to recruit freshman undergraduates for research opportunities.}
-    \resumeSubItem{Association for Computing Machinery}
-      {Chair of the USC Student Chapter - coordinate guest speakers, budgeting, donor relations, and biannual University-wide Code-A-Thon.}
+    \resumeSubItem{Ambassador, Office of Undergraduate Research}
+      {Conduct presentations to recruit freshman undergraduates for research opportunities.}
+    \resumeSubItem{Chair, Association for Computing Machinery Student Chapter}
+      {Coordinate student speakers, budgeting, donor relations, and biannual University-wide Code-A-Thon.}
   \resumeSubHeadingListEnd
 
 %
