--- a/with_projects.tex
+++ b/with_projects.tex
@@ -163,15 +163,15 @@
 
 
 %-----------PROJECTS-----------------
-%\section{Projects}
-%  \resumeSubHeadingListStart
-%    \resumeSubItem{Personal Website}
-%      {(Work-in-Progress) Blog and information about my current projects. Written using Ghost.}
-%    \resumeSubItem{Daily Workout ``App"}
-%      {A simple Python code that I use to push my daily workout times to a mongoDB server.}
-%  \resumeSubHeadingListEnd
-%
-%
+\section{Projects}
+  \resumeSubHeadingListStart
+    \resumeSubItem{Personal Website}
+      {(Work-in-Progress) Blog and information about my current projects. Written using Ghost.}
+    \resumeSubItem{Daily Workout ``App"}
+      {A simple Python code that I use to push my daily workout times to a mongoDB server.}
+  \resumeSubHeadingListEnd
+
+
 %-----------PROJECTS-----------------
 \section{Campus Activities}
   \resumeSubHeadingListStart
