--- a/hobbs_resume.tex
+++ b/hobbs_resume.tex
@@ -102,7 +102,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of South Carolina}{Columbia, SC}
-      {Bachelor of Science in Computer Science (Honors College);  GPA: 3.63}{Dec. 2023}
+      {Bachelor of Science in Computer Science (Honors College);  GPA: 3.63}{May 2023}
   \resumeSubHeadingListEnd
 
 
@@ -129,7 +129,7 @@
         \resumeItem{Supercomputing Systems}
           {Learned about the hardware, software, and infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center (NERSC). Cori is currently the 30th most powerful supercomputer in the world.}
         \resumeItem{Novel Technologies}
-          {Installed the Flux framework (developed by Lawrence Livermore National Laboratory) onto NERSC's Cori system. Used specialized HPC software such as Shifter (containerization), Spack (package management), SLURM (scheduling), Process Management Interface for multi-node jobs, and the Cray Linux Environment.}
+          {Installed the Flux framework (developed by Lawrence Livermore National Laboratory) onto NERSC's Cori system. Used software for containerization (Shifter), package management (Spack), scheduling and resource allocation (SLURM), multi-node job communication (PMIx), and command-line interface (Cray Linux).}
          \resumeItem{Workflow Management}
           {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users. Expanded workflow toolkit to include the Flux framework, a novel resource management framework with interactive job submission capabilites.}
         \resumeItem{Technical Documentation}
@@ -183,10 +183,11 @@
 
 %
 %--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
+\section{Skills}
   \resumeSubHeadingListStart
     \resumeSubItem{Languages}{Python, C/C++, Java, MATLAB}
-    \resumeSubItem{Technologies}{Docker, Git, Bash/Zsh (Linux Environment), PyPlot, Pandas, Microsoft Office Suite, \LaTeX}
+    \resumeSubItem{Technologies}{Docker, Git, Bash/Zsh (Linux), PyPlot, Pandas, Microsoft Office Suite, \LaTeX}
+    \resumeSubItem{Interests}{CrossFit, Kayaking, Cooking, Biographies/Memoirs}
   \resumeSubHeadingListEnd
 
 
