--- a/hobbs_resume.tex
+++ b/hobbs_resume.tex
@@ -127,11 +127,11 @@
       {High-Performance Computing Intern}{June 2021 -- Aug. 2021}
       \resumeItemListStart
         \resumeItem{Supercomputing Systems}
-          {Learned about the hardware, software, and infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center (NERSC). Cori is currently the 30th most powerful supercomputer in the world.}
+          {Learned about the hardware, software, and infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center (NERSC). Cori is currently the 30th most powerful supercomputer in the world. Wrote code in C/C++ for multi-node compute jobs.}
         \resumeItem{Novel Technologies}
           {Installed the Flux framework (developed by Lawrence Livermore National Laboratory) onto NERSC's Cori system. Used software for containerization (Shifter), package management (Spack), scheduling and resource allocation (SLURM), multi-node job communication (PMIx), and command-line interface (Cray Linux).}
          \resumeItem{Workflow Management}
-          {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users. Expanded workflow toolkit to include the Flux framework, a novel resource management framework with interactive job submission capabilites.}
+          {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users. Expanded workflow toolkit to include the Flux framework, a novel resource management framework with interactive job submission capabilities.}
         \resumeItem{Technical Documentation}
           {Wrote a page for the NERSC Technical Documentation and a research report on using the Flux framework on the Cori System. Presented a poster at the LBNL Computing Sciences Summer Poster Session.}
       \resumeItemListEnd
