--- a/with_projects.tex
+++ b/with_projects.tex
@@ -163,12 +163,12 @@
 
 
 %-----------PROJECTS-----------------
-\section{Projects}
+\section{Current Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{Personal Website}
-      {(Work-in-Progress) Blog and information about my current projects. Written using Ghost.}
-    \resumeSubItem{Daily Workout ``App"}
-      {A simple Python code that I use to push my daily workout times to a mongoDB server.}
+    \resumeSubItem{Internship Tracking App}
+      {Java app designed for a university to store employer and student accounts, manage applications and job listings.}
+    \resumeSubItem{Workout Tracking}
+      {A Python code that I use to push my daily workout times to a mongoDB server.}
   \resumeSubHeadingListEnd
 
 
