--- a/with_projects.tex
+++ b/with_projects.tex
@@ -117,21 +117,21 @@
         \resumeItem{Computational Biology}
           {Analyzing image data of lung sputum collected by the University of New Mexico Comprehensive Cancer Center.}
         \resumeItem{Machine Learning}
-          {Utilizing machine learning techniques including Convolutional Neural Networks and Python libraries such as OpenCV and TensorFlow to train networks that can analyze cancerous cell slides.}
+          {Utilizing machine learning techniques and Python libraries such as OpenCV and TensorFlow to train networks that can analyze cell slide data.}
         \resumeItem{Game Design and Outreach}
           {Developing a curriculum funded by NASA to teach the Godot Engine to high school students throughout the state of South Carolina.}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Lawrence Berkeley National Laboratory}{Berkeley, CA}
+      {Lawrence Berkeley National Laboratory}{Berkeley, CA \textit{(remote)}}
       {High-Performance Computing Intern}{June 2021 -- Aug. 2021}
       \resumeItemListStart
         \resumeItem{Supercomputing Systems}
-          {Learned about the hardware, software, and infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center (NERSC). Cori is currently the 30th most powerful supercomputer in the world.}
+          {Learned about the hardware, software, and infrastructure that made up the Cori system at the National Energy Research Scientific Computing Center (NERSC). Cori is currently the 30th most powerful supercomputer in the world (per Top500).}
         \resumeItem{Novel Technologies}
           {Installed the Flux framework (developed by Lawrence Livermore National Laboratory) onto NERSC's Cori system. Used specialized HPC software such as Shifter (containerization), Spack (package management), SLURM (scheduling), Process Management Interface for multi-node jobs, and the Cray Linux Environment.}
          \resumeItem{Workflow Management}
-          {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users. Expanded workflow toolkit to include the Flux framework, a novel resource management framework with interactive job submission capabilites.}
+          {Reviewed existing tools for automated management of scientific workflows to determine future workflow needs of NERSC users. Expanded workflow toolkit to include the Flux framework, a novel resource management framework with interactive job submission capabilities.}
         \resumeItem{Technical Documentation}
           {Wrote a page for the NERSC Technical Documentation and a research report on using the Flux framework on the Cori System. Presented a poster at the LBNL Computing Sciences Summer Poster Session.}
       \resumeItemListEnd
@@ -155,7 +155,7 @@
         \resumeItem{Data Cleaning}
           {Organized data into Python dictionaries and used data science libraries such as Pandas to optimize for machine learning algorithms, neural networks, and pattern recognition.}
         \resumeItem{Engineering Subject Research}
-          {Consulted on Acoustic Emission (AE) data collected from concrete degradation. Used Python and R to prepare/analyze data on concrete and other structures.}
+          {Consulted on acoustic emission data collected from concrete degradation. Used Python and R to prepare/analyze data on concrete and other structures.}
         \resumeItem{Presentation \& Reports}
           {Presented at the Massachusetts Institute of Technology Undergraduate Research Technology Conference on machine learning uncertainty and bias for education/psychology projects.}
       \resumeItemListEnd
@@ -166,7 +166,7 @@
 \section{Current Projects}
   \resumeSubHeadingListStart
     \resumeSubItem{Internship Tracking App}
-      {Java app designed for a university to store employer and student accounts, manage applications and job listings.}
+      {Java app designed for a university to store employer and student accounts, manage applications and job listings. Project for Software Engineering (CSE 247) class.}
     \resumeSubItem{Workout Tracking}
       {A Python code that I use to push my daily workout times to a mongoDB server.}
   \resumeSubHeadingListEnd
@@ -178,15 +178,15 @@
     \resumeSubItem{Ambassador, Office of Undergraduate Research}
       {Conduct presentations to recruit freshman undergraduates for research opportunities.}
     \resumeSubItem{Chair, Association for Computing Machinery Student Chapter}
-      {Coordinate student speakers, budgeting, donor relations, and biannual University-wide Code-A-Thon.}
+      {Coordinate student speakers, budgeting, donor relations, and biannual Code-A-Thon, a University-wide student-led coding competition.}
   \resumeSubHeadingListEnd
 
 %
 %--------PROGRAMMING SKILLS------------
 \section{Programming Skills}
   \resumeSubHeadingListStart
-    \resumeSubItem{Languages}{Python, C/C++, Java, MATLAB}
-    \resumeSubItem{Technologies}{Docker, Git, Bash/Zsh (Linux Environment), PyPlot, Pandas, Microsoft Office Suite, \LaTeX}
+    \resumeSubItem{Languages}{Python, C++, Java, MATLAB}
+    \resumeSubItem{Technologies}{Docker/Shifter, Git, Bash/Zsh (Linux Environment), PyPlot, Pandas, Microsoft Office Suite, \LaTeX}
   \resumeSubHeadingListEnd
 
 
